// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api configured for cors 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "get": {
        "operationId": "get",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
            "headers": {
              "Access-Control-Allow-Headers": {
                "schema": {
                  "type": "string",
                },
              },
              "Access-Control-Allow-Methods": {
                "schema": {
                  "type": "string",
                },
              },
              "Access-Control-Allow-Origin": {
                "schema": {
                  "type": "string",
                },
              },
              "Access-Control-Max-Age": {
                "schema": {
                  "type": "string",
                },
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-41_9A92DA81.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "204": {
            "description": "204 response",
            "headers": {
              "Access-Control-Allow-Headers": {
                "type": "string",
              },
              "Access-Control-Allow-Methods": {
                "type": "string",
              },
              "Access-Control-Allow-Origin": {
                "type": "string",
              },
              "Content-Type": {
                "type": "string",
              },
            },
          },
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                #if ($context.httpMethod == \\"OPTIONS\\")
                    {\\"statusCode\\": 204}
                #else
                    {\\"statusCode\\": 404}
                #end
              ",
          },
          "responses": {
            "204": {
              "responseParameters": {
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,Authorization,X-Requested-With'",
                "method.response.header.Access-Control-Allow-Methods": "'GET,POST,PUT,DELETE,HEAD,OPTIONS'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{}",
              },
              "statusCode": "204",
            },
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with 'name' & 'age' parameter 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/{name}/{age}": {
      "get": {
        "operationId": "get-{name}/{age}",
        "parameters": [
          {
            "in": "path",
            "name": "name",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "in": "path",
            "name": "age",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-24_6F734A53.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with 'name' parameter 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/{name}": {
      "get": {
        "operationId": "get-{name}",
        "parameters": [
          {
            "in": "path",
            "name": "name",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-22_37CA0861.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with CONNECT route 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "connect": {
        "operationId": "connect",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-38_8CEC55F9.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with DELETE route 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "delete": {
        "operationId": "delete",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-32_28A3BB9C.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with GET route at root 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "get": {
        "operationId": "get",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-0_FB47039A.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with GET routes with common prefix 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/hello/bat": {
      "get": {
        "operationId": "get-hello/bat",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-5_E35A083C.arn}/invocations",
        },
      },
    },
    "/hello/foo": {
      "get": {
        "operationId": "get-hello/foo",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-4_93B99CF6.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with GET routes with different prefix 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/foo/bar": {
      "get": {
        "operationId": "get-foo/bar",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-9_1562862E.arn}/invocations",
        },
      },
    },
    "/hello/foo": {
      "get": {
        "operationId": "get-hello/foo",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-8_7998C533.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with HEAD route 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "head": {
        "operationId": "head",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-36_462C87EB.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with OPTIONS route 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "options": {
        "operationId": "options",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-34_C2E62316.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with PATCH route 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "patch": {
        "operationId": "patch",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-30_1899B4E1.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with POST route 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "post": {
        "operationId": "post",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-26_308DFDA7.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with PUT route 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "put": {
        "operationId": "put",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-28_F4EC7FBB.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with multiple GET route and one lambda 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/hello/bat": {
      "get": {
        "operationId": "get-hello/bat",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-12_B1B9F22A.arn}/invocations",
        },
      },
    },
    "/hello/foo": {
      "get": {
        "operationId": "get-hello/foo",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-12_B1B9F22A.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with multiple methods and multiple lambda 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/hello/bat": {
      "post": {
        "operationId": "post-hello/bat",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-15_B80270CB.arn}/invocations",
        },
      },
    },
    "/hello/foo": {
      "get": {
        "operationId": "get-hello/foo",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-14_65BA91A8.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with multiple methods and one lambda 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/hello/bat": {
      "post": {
        "operationId": "post-hello/bat",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-18_F191042B.arn}/invocations",
        },
      },
    },
    "/hello/foo": {
      "get": {
        "operationId": "get-hello/foo",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-18_F191042B.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with multiple methods on same route 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/": {
      "get": {
        "operationId": "get",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-2_A928283C.arn}/invocations",
        },
      },
      "put": {
        "operationId": "put",
        "parameters": [],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-2_A928283C.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;

exports[`api with path parameter 1`] = `
{
  "openapi": "3.0.3",
  "paths": {
    "/hello/{world}": {
      "get": {
        "operationId": "get-hello/{world}",
        "parameters": [
          {
            "in": "path",
            "name": "world",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {},
            "description": "200 response",
          },
        },
        "x-amazon-apigateway-integration": {
          "contentHandling": "CONVERT_TO_TEXT",
          "httpMethod": "POST",
          "passthroughBehavior": "when_no_match",
          "responses": {
            "default": {
              "statusCode": "200",
            },
          },
          "type": "aws_proxy",
          "uri": "arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.Api_Api-OnRequest-20_3A30BFC4.arn}/invocations",
        },
      },
    },
    "/{proxy+}": {
      "x-amazon-apigateway-any-method": {
        "produces": [
          "application/json",
        ],
        "responses": {
          "404": {
            "description": "404 response",
            "headers": {
              "Content-Type": {
                "type": "string",
              },
            },
          },
        },
        "x-amazon-apigateway-integration": {
          "passthroughBehavior": "never",
          "requestTemplates": {
            "application/json": "
                {\\"statusCode\\": 404}
              ",
          },
          "responses": {
            "404": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
            "default": {
              "responseParameters": {
                "method.response.header.Content-Type": "'application/json'",
              },
              "responseTemplates": {
                "application/json": "{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}",
              },
              "statusCode": "404",
            },
          },
          "type": "mock",
        },
      },
    },
  },
}
`;
